# rust-api

./: .gitignore  Cargo.toml  database.sql  procedures.sql
src/: main.rs
src/middleware/: jwt.rs  mod.rs  sa.rs
src/modelos/: asistencia.rs  docs.rs  mod.rs  model.rs  trabajador.rs
src/rutas/: asistencia.rs  documentos.rs  empleados.rs  login.rs  mod.rs
