[package]
name = "fullapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7.1", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "chrono",
    "bigdecimal",
    "uuid",
] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
